# AIEOS

./: .env.example  .gitignore  .secrets.baseline  .tool-versions  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/ai_mock/: pyproject.toml
adapters/ai_mock/src/aieos/adapters/: __init__.py
adapters/ai_mock/src/aieos/adapters/ai_mock/: __init__.py  gateway.py
adapters/command_dispatch_in_process/: pyproject.toml
adapters/command_dispatch_in_process/src/aieos/adapters/command_dispatch_in_process/: __init__.py  dispatcher.py
adapters/event_bus_in_process/: pyproject.toml
adapters/event_bus_in_process/src/aieos/adapters/event_bus_in_process/: __init__.py  bus.py
adapters/memory_persistence/: pyproject.toml
adapters/memory_persistence/src/aieos/adapters/memory_persistence/: __init__.py  repository.py
adapters/observability_default/: pyproject.toml
adapters/observability_default/src/aieos/adapters/observability_default/: __init__.py  recorder.py
adapters/persistence_postgres/: pyproject.toml
adapters/persistence_postgres/src/aieos/adapters/persistence_postgres/: __init__.py
adapters/persistence_postgres/src/aieos/adapters/persistence_postgres/_internal/: __init__.py
adapters/secrets_environment/: pyproject.toml
adapters/secrets_environment/src/aieos/adapters/secrets_environment/: __init__.py
apps/api/: pyproject.toml
apps/api/src/aieos_api/: __init__.py  composition.py  lifecycle.py  main.py  reference_skill.py  settings.py
apps/api/tests/: test_composition.py
docs/01-company/: Mission.md  ProductStrategy.md  README.md  Values.md  Vision.md
docs/02-engineering-handbook/: CodingStandards.md  Deployment.md  GitWorkflow.md  Observability.md  Principles.md  PromptStandards.md  README.md  Security.md  Testing.md
docs/03-architecture/: EngineeringBlueprint.md  README.md  SystemArchitecture.md
docs/architecture/: CommandContract.md  DomainModel.md  ErrorResultModel.md  EventContract.md  ExecutionFlow.md  ObservabilityModel.md  ServiceInterfaces.md
docs/development/: Executable-Reference-Workflow.md  Repository-Bootstrap.md
docs/engineering-specifications/: ES-001-Execution-Core.md  ES-002-Execution-Flow-Architecture.md  ES-003-Domain-Model-and-Ubiquitous-Language.md  ES-004-Command-Contract-Model.md  ES-005-Event-Contract-Model.md  ES-006-Service-Interface-Contracts.md  ES-007-Error-and-Result-Model.md  ES-008-Observability-Model.md  ES-009-Repository-and-Tooling-Bootstrap.md  ES-010-Executable-Reference-Workflow.md  README.md
docs/runtime-architecture/: Build-Test-Release-Strategy.md  Dependency-Rules.md  Local-Development-Workflow.md  README.md  Repository-Layout.md  Runtime-Architecture-v1.0.md
docs/runtime-architecture/decisions/: README.md  TDR-001-Python-Runtime.md  TDR-002-Monorepo-Modular-Monolith.md  TDR-003-UV-Workspace.md  TDR-004-Command-Dispatch.md  TDR-005-Event-Bus.md  TDR-006-Persistence.md  TDR-007-Configuration-Secrets.md  TDR-008-Composition.md  TDR-009-Testing.md  TDR-010-Contract-Validation.md  TDR-011-Observability.md  TDR-012-CI-Release.md  TDR-013-Plugin-Loading.md  TDR-014-HTTP-Host.md
scripts/: bootstrap  check  reset-local  run-host
tests/: conftest.py
tests/architecture/: test_frozen_authority.py  test_package_imports.py  test_tooling_regressions.py
tests/e2e/: test_placeholder.py
tests/integration/: test_bootstrap.py  test_outbox_recovery.py  test_recovery_semantics.py  test_reference_workflow.py
tooling/: __init__.py  bootstrap_skeleton.py  doctor.py
tooling/dependency_rules/: __init__.py  check_boundaries.py
tooling/docs_validation/: __init__.py  validate_docs.py
