[project]
name = "aieos-root"
version = "0.0.0"
requires-python = "==3.13.*"
dependencies = []

[dependency-groups]
dev = [
  "anyio==4.10.0",
  "bandit==1.8.6",
  "detect-secrets==1.5.0",
  "hypothesis==6.138.15",
  "httpx==0.28.1",
  "pyright==1.1.404",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.10",
]

[tool.uv]
package = false
required-version = "==0.8.14"

[tool.uv.workspace]
members = ["apps/*", "packages/*", "adapters/*"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["apps/*/src", "packages/*/src", "adapters/*/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = ["apps", "packages", "adapters", "tests", "tooling"]
exclude = ["**/.venv", "**/__pycache__"]
reportMissingTypeStubs = false

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
pythonpath = ["."]
testpaths = ["packages", "apps", "adapters", "tests"]
markers = [
  "integration: bootstrap integration checks",
  "e2e: end-to-end placeholders",
]

[tool.coverage.run]
branch = true
source = ["aieos"]

[tool.coverage.report]
show_missing = true
skip_empty = true
