[project]
name = "aieos-adapter-ai-mock"
version = "0.0.0"
description = "AIEOS ai mock bootstrap package."
requires-python = "==3.13.*"
dependencies = []

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aieos/adapters/ai_mock"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
