[project]
name = "aieos-adapter-command-dispatch-in-process"
version = "0.0.0"
description = "AIEOS command dispatch in process bootstrap package."
requires-python = "==3.13.*"
dependencies = []

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aieos/adapters/command_dispatch_in_process"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
