[project]
name = "aieos-adapter-event-bus-in-process"
version = "0.0.0"
description = "AIEOS event bus in process bootstrap package."
requires-python = "==3.13.*"
dependencies = []

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aieos/adapters/event_bus_in_process"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
