[project]
name = "aieos-adapter-memory-persistence"
version = "0.0.0"
description = "AIEOS memory persistence bootstrap package."
requires-python = "==3.13.*"
dependencies = ["aieos-memory-service"]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aieos/adapters/memory_persistence"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv.sources]
aieos-memory-service = { workspace = true }
