[project]
name = "aieos-adapter-secrets-environment"
version = "0.0.0"
description = "AIEOS secrets environment bootstrap package."
requires-python = "==3.13.*"
dependencies = []

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aieos/adapters/secrets_environment"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
