[project]
name = "aieos-api"
version = "0.0.0"
description = "AIEOS initial HTTP host bootstrap."
requires-python = "==3.13.*"
dependencies = [
  "fastapi==0.116.1",
  "pydantic-settings==2.10.1",
  "uvicorn==0.35.0",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aieos_api"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
